<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newPoint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.NewPointFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/yandexmaps"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/_8dp"
        app:icon="@drawable/ic_menu_24"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        style="@style/App.Widget.Button"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/photoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterDetailedInformation"
                tools:src="@tools:sample/avatars[12]" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/removePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                app:layout_constraintBottom_toBottomOf="@id/photo"
                app:layout_constraintEnd_toEndOf="@id/photo"
                app:layout_constraintStart_toStartOf="@id/photo" />

            <TextView
                android:id="@+id/enterTitleMessage"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/enter_the_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/enterTitle"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:hint="@string/title_text"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:padding="@dimen/_8dp"
                android:scrollbars="vertical"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/enterTitleMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/enterCityMessage"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/enter_the_city"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterTitle" />

            <EditText
                android:id="@+id/enterCity"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:hint="@string/city_text"
                android:inputType="textMultiLine"
                android:maxLines="1"
                android:padding="@dimen/_8dp"
                android:scrollbars="vertical"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/enterCityMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/enterLatitudeMessage"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/enter_the_latitude"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterCity" />

            <EditText
                android:id="@+id/enterLatitude"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:hint="@string/latitude_text"
                android:inputType="textMultiLine"
                android:maxLines="1"
                android:padding="@dimen/_8dp"
                android:scrollbars="vertical"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/enterLatitudeMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/enterLongitudeMessage"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/enter_the_longitude"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterLatitude" />

            <EditText
                android:id="@+id/enterLongitude"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:hint="@string/longitude_text"
                android:inputType="textMultiLine"
                android:maxLines="1"
                android:padding="@dimen/_8dp"
                android:scrollbars="vertical"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/enterLongitudeMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/enterDetailedInformationMessage"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/enter_the_detailed_information"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterLongitude" />

            <EditText
                android:id="@+id/enterDetailedInformation"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:hint="@string/detailed_information_text"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:padding="@dimen/_8dp"
                android:scrollbars="vertical"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/enterDetailedInformationMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/photo"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupPhotoContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="photo, removePhoto" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="top"
                app:constraint_referenced_ids="photo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/pick_photo"
            android:padding="0dp"
            app:icon="@drawable/ic_pick_photo_48"
            app:iconSize="48dp"
            style="@style/App.Widget.Button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/take_photo"
            android:padding="0dp"
            app:icon="@drawable/ic_take_photo_48"
            app:iconSize="48dp"
            style="@style/App.Widget.Button"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>