<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/titlePointDialogBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/enter_the_title"
            android:layout_marginTop="@dimen/_16dp"
            android:paddingBottom="@dimen/_16dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/enterTitleText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/title_text"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:padding="@dimen/_8dp"
            android:scrollbars="vertical"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enterTitleButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="@string/enter"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/enterTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>